# warehouse_management

./: .gitignore  pyproject.toml
apps/cart/: admin.py  apps.py  models.py  views.py
apps/cart/migrations/: 0001_initial.py  0002_alter_cartitem_options_cart_cartitem_cart_and_more.py  0002_initial.py
apps/frontend/: apps.py  urls.py  views.py
apps/inventory/: admin.py  apps.py  models.py  services.py  signals.py
apps/inventory/migrations/: 0001_initial.py  0002_initial.py  0003_delete_stockadjustment.py  0004_alter_stockin_unit_cost.py
apps/orders/: admin.py  apps.py  models.py  signals.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_initial.py  0003_alter_order_status_alter_orderitem_cost_price_and_more.py  0003_remove_order_remark_remove_order_shipping_address_and_more.py  0004_payment.py
apps/products/: admin.py  apps.py  models.py  views.py
apps/products/migrations/: 0001_initial.py  0002_alter_product_name.py  0002_remove_product_stock_remove_product_stock_warning.py  0003_alter_product_description.py  0004_alter_product_description.py  0005_productstock.py
apps/reports/: apps.py  urls.py  views.py
apps/users/: admin.py  models.py  views.py
apps/users/migrations/: 0001_initial.py
static/js/: main.js
staticfiles/css/: style.css
templates/: base.html
templates/admin/products/: category_tree.html
templates/admin/reports/: base_report.html  inventory_report.html  profit_report.html  sales_report.html
templates/frontend/: base.html  login.html
warehouse_management/: asgi.py  settings.py  urls.py  wsgi.py
(+7 files in other folders)
