[project]
name = "warehouse-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
    "django-ckeditor>=6.7.3",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-simpleui>=2026.1.13",
    "djangorestframework>=3.16.1",
    "pillow>=12.1.0",
]
